  Fixes :issue:`497`

* Support ``--install-option`` and ``--global-option`` per requirement in
  requirement files (:pull:`2537`)

* Build Wheels prior to installing from sdist, caching them in the pip cache
  directory to speed up subsequent installs. (:pull:`2618`)

* Allow fine grained control over the use of wheels and source builds.
  (:pull:`2699`)

**6.1.1 (2015-04-07)**

* No longer ignore dependencies which have been added to the standard library,
  instead continue to install them.


**6.1.0 (2015-04-07)**

* Fixes :issue:`2502`. Upgrades were failing when no potential links were found
  for dependencies other than the current installation. (:pull:`2538`)

* Use a smoother progress bar when the terminal is capable of handling it,
  otherwise fallback to the original ASCII based progress bar.

* Display much less output when `pip install` succeeds, because on success,
  users probably don't care about all the nitty gritty details of compiling and
  installing. When `pip install` fails, display the failed install output once
  instead of twice, because once is enough. (:pull:`2487`)

* Upgrade the bundled copy of requests to 2.6.0, fixing CVE-2015-2296.

* Display format of latest package when using ``pip list --outdated``.
  (:pull:`2475`)

* Don't use pywin32 as ctypes should always be available on Windows, using
  pywin32 prevented uninstallation of pywin32 on Windows. (:pull:`2467`)

* Normalize the ``--wheel-dir`` option, expanding out constructs such as ``~``
  when used (:pull:`2441`).

* Display a warning when an undefined extra has been requested. (:pull:`2142`)

* Speed up installing a directory in certain cases by creating a sdist instead
  of copying the entire directory. (:pull:`2535`)

* Don't follow symlinks when uninstalling files (:pull:`2552`)

* Upgrade the bundled copy of cachecontrol from 0.11.1 to 0.11.2.
  Fixes :issue:`2481` (:pull:`2595`)

* Attempt to more smartly choose the order of installation to try and install