@@ -125,6 +125,7 @@ class WheelCommand(RequirementCommand):
     def run(self, options, args):
         self.check_required_packages()
         cmdoptions.resolve_wheel_no_use_binary(options)
+        cmdoptions.check_install_build_global(options)
 
         index_urls = [options.index_url] + options.extra_index_urls
         if options.no_index:
