@@ -28,6 +28,10 @@
 * Allow fine grained control over the use of wheels and source builds.
   (:pull:`2699`)
 
+* The use of ``--install-option``, ``--global-option`` or ``--build-option``
+  disable the use of wheels, and the autobuilding of wheels. (:pull:`2711`))
+  Fixes :issue:`2677`
+
 **6.1.1 (2015-04-07)**
 
 * No longer ignore dependencies which have been added to the standard library,
